--- a/ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/schedules.yaml
+++ b/ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/schedules.yaml
@@ -4,12 +4,86 @@
   authentication:
     clientId: {{ icapi_extractors_client_id }}
     clientSecret: {{ icapi_extractors_client_secret }}
-- name: Backfill once a day for the last 30 days (gap filling)
+- name: Backfill Oslo once a day for the last 30 days (gap filling)
   functionExternalId: icapi_datapoints_extractor
   cronExpression: "0 0 * * *"
   data:
     backfill: True
     hours: 720
+    sites:
+    - Oslo
+- name: Backfill Houston once a day for the last 30 days (gap filling)
+  functionExternalId: icapi_datapoints_extractor
+  cronExpression: "0 0 * * *"
+  data:
+    backfill: True
+    hours: 720
+    sites:
+    - Houston
+- name: Backfill Kuala Lumpur once a day for the last 30 days (gap filling)
+  functionExternalId: icapi_datapoints_extractor
+  cronExpression: "0 0 * * *"
+  data:
+    backfill: True
+    hours: 720
+    sites:
+    - Kuala Lumpur
+- name: Backfill Nuremberg once a day for the last 30 days (gap filling)
+  functionExternalId: icapi_datapoints_extractor
+  cronExpression: "0 0 * * *"
+  data:
+    backfill: True
+    hours: 720
+    sites:
+    - Nuremberg
+- name: Backfill Hannover once a day for the last 30 days (gap filling)
+  functionExternalId: icapi_datapoints_extractor
+  cronExpression: "0 0 * * *"
+  data:
+    backfill: True
+    hours: 720
+    sites:
+    - Hannover	
+- name: Backfill Rotterdam once a day for the last 30 days (gap filling)
+  functionExternalId: icapi_datapoints_extractor
+  cronExpression: "0 0 * * *"
+  data:
+    backfill: True
+    hours: 720
+    sites:
+    - Rotterdam
+- name: Backfill Marseille once a day for the last 30 days (gap filling)
+  functionExternalId: icapi_datapoints_extractor
+  cronExpression: "0 0 * * *"
+  data:
+    backfill: True
+    hours: 720
+    sites:
+    - Marseille
+- name: Backfill Sao Paulo once a day for the last 30 days (gap filling)
+  functionExternalId: icapi_datapoints_extractor
+  cronExpression: "0 0 * * *"
+  data:
+    backfill: True
+    hours: 720
+    sites:
+    - Sao Paulo
+- name: Backfill Chicago once a day for the last 30 days (gap filling)
+  functionExternalId: icapi_datapoints_extractor
+  cronExpression: "0 0 * * *"
+  data:
+    backfill: True
+    hours: 720
+    sites:
+    - Chicago
+- name: Backfill London once a day for the last 30 days (gap filling)
+  functionExternalId: icapi_datapoints_extractor
+  cronExpression: "0 0 * * *"
+  data:
+    backfill: True
+    hours: 720
+    sites:
+    - London
   authentication:
     clientId: {{ icapi_extractors_client_id }}
     clientSecret: {{ icapi_extractors_client_secret }}
